--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/schema/spring-security"
@@ -29,7 +27,7 @@
                     <i class="fa fa-paper-plane"></i> LOGIN
                 </button>
                 <div class="links">
-                    <a href="Register.jsp">Create Account</a>
+                    <a href="Register.html">Create Account</a>
                     <a href="#">Forget Password?</a>
                 </div>
             </form>
