--- a/src/main/webapp/Register.html
+++ b/src/main/webapp/Register.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/schema/spring-security"
@@ -38,7 +36,7 @@
                     <i class="fa fa-user-plus"></i> REGISTER
                 </button>
                 <div class="links">
-                    <a href="Login.jsp">Already have an account? Login</a>
+                    <a href="Login.html">Already have an account? Login</a>
                 </div>
             </form>
         </div>
