--- a/src/main/webapp/SinglePlaylistScreen.html
+++ b/src/main/webapp/SinglePlaylistScreen.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/schema/spring-security"
@@ -32,7 +30,7 @@
             </div>
             <!-- Brand Name -->
             <div class="name">
-                <a href="Home.jsp" style="text-decoration: none; color: white; ">
+                <a href="Home.html" style="text-decoration: none; color: white; ">
                     <h2>R.K.S</h2>
                     <h5>Studio</h5>
                 </a>
