add regiter user

--- a/src/main/webapp/Register.html
+++ b/src/main/webapp/Register.html
@@ -15,7 +15,7 @@
         <div class="register-box">
             <img src="assets/image/logo.jpg" alt="Logo" class="logo">
             <h2>Create Your Account</h2>
-            <form th:action="@{/register}" method="post">
+            <!-- <form id="registrationForm" method="post"> -->
                 <div class="input-group">
                     <i class="fa fa-user"></i>
                     <input type="text" name="username" placeholder="Your Username" required />
@@ -38,8 +38,10 @@
                 <div class="links">
                     <a href="Login.html">Already have an account? Login</a>
                 </div>
-            </form>
+           <!--  </form> -->
         </div>
     </div>
+    <script src="assets/javascript/Register.js"></script>
 </body>
+
 </html>
