add log out user

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -82,7 +82,7 @@
 					
 			        <img class ="img-logout" src="https://img.icons8.com/external-smashingstocks-glyph-smashing-stocks/66/FFFFFF/external-reviews-digital-marketing-smashingstocks-glyph-smashing-stocks-2.png"/>
 			        <h4>
-			        	<a href="Home.html" class ="logout" style="color: #ffff;">Log out</a>
+			        	<a id="logout-form" class ="logout" style="color: #ffff;">Log out</a>
 			        </h4>
 			        
 			        <img class ="img-logout" src="https://img.icons8.com/external-smashingstocks-glyph-smashing-stocks/66/FFFFFF/external-reviews-digital-marketing-smashingstocks-glyph-smashing-stocks-2.png"/>
