--- a/src/main/webapp/SinglePlaylistScreen.html
+++ b/src/main/webapp/SinglePlaylistScreen.html
@@ -133,14 +133,14 @@
 			    <div class="band-detail">
 			        <div class="descriptive-part">
 			            <div class="song-name-main">
-			                <h1>ColdPlay - Favorite</h1>
+			                <h1>Your Favorite</h1>
 			            </div>
 			            <div class="followers">
 			                Favorite
 			            </div>
 			            <p class="author"></p>
 			            <p class="desc">
-			                Đây là nội dung yêu thích của Coldplay, một ban nhạc nổi tiếng của Anh, nổi bật với các ca khúc sâu lắng và ý nghĩa.
+			                The Favorites section in our music app is designed to be your personalized music library, where you can easily save, access, and manage all the songs, albums, and playlists you love. Simply tap the heart icon on any track to add it to your Favorites, and enjoy your top picks without needing to search. You’ll find everything neatly organized, allowing you to listen to your favorite music anytime, whether online or offline (if downloaded). Rediscover old favorites, keep up with new loves, and build a collection that perfectly reflects your musical taste!
 			            </p>
 			        </div>
 			        <div class="action-part">
